--- a/web-app/src/app.html
+++ b/web-app/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" style="background-color: #262626;">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/UVP-logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Ultimate Video Player</title>
 		%sveltekit.head%
